civo-github/templates/mgmt/components/ipfs-gateway/ipfs-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ipfs-node
  labels:
    app: ipfs-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ipfs-node
  template:
    metadata:
      labels:
        app: ipfs-node
    spec:
      containers:
      - name: ipfs-node
        image: ipfs/kubo:v0.23.0
        ports:
        - containerPort: 4001
          name: swarm
          protocol: TCP
        - containerPort: 5001
          name: api
          protocol: TCP
        - containerPort: 8080
          name: gateway
          protocol: TCP
        volumeMounts:
          - name: ipfs-node-volume
            mountPath: /data/ipfs
          - name: ipfs-node-volume
            mountPath: /export
          - name: ipfs-container-init-volume
            mountPath: /container-init.d
      volumes:
      - name: ipfs-container-init-volume
        configMap:
          name: ipfs-node-init-cfg
      - name: ipfs-node-volume
        persistentVolumeClaim:
          claimName: ipfs-node
---
apiVersion: v1
kind: Service
metadata:
  name: ipfs-node
spec:
  selector:
    app: ipfs-node
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ipfs-gateway
  annotations:
    <CERT_MANAGER_ISSUER_ANNOTATION_1>
    <CERT_MANAGER_ISSUER_ANNOTATION_2>
    <CERT_MANAGER_ISSUER_ANNOTATION_3>
    <CERT_MANAGER_ISSUER_ANNOTATION_4>
spec:
  ingressClassName: nginx
  rules:
    - host: ipfs-gateway.<DOMAIN_NAME>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ipfs-node
                port:
                  number: 8080
  tls:
    - secretName: ipfs-gateway-tls
      hosts:
      - ipfs-gateway.<DOMAIN_NAME>
